--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -67,7 +67,7 @@
                 </a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a href="d_contests.html">
+                <a routerLink="contests">
                   <div class="icnWrapperD">
                     <img src="../../../../assets../../../../assets//images/dashboard_icn4.png" alt=""
                          class="img-responsive"/>
