--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -36,7 +36,7 @@ section{padding: 100px 0px;}
 .frgtPsswd:hover{text-decoration: underline;}
 .srOnly{display: none;}
 .tred{color: #ff6666 !important;}
-
+.marTop30{margin-top: 30px;}
 
 .dashboardContainer .fixedDash .topFilter{width: 85% !important; margin-top: 0px !important;}
 
@@ -123,7 +123,7 @@ section{padding: 100px 0px;}
 	.matchDetails .matchDetailsSlider{padding: 0px 55px;position: relative;}
 	.matchDetails .matchDetailsSlider .owl-item .item h4{background: #555555;font-size: 13px;color: rgba(255,255,255,0.8);line-height: 30px;text-align: center;font-weight: 400;text-transform: uppercase;margin: 0px;}
 	.matchDetails .matchDetailsSlider .owl-item .item ul{background: rgba(85,85,85,0.2);margin: 0px;padding: 15px;}
-	.matchDetails .matchDetailsSlider .owl-item .item ul > li{display: flex;flex-flow: row wrap;justify-content: space-between;align-items: flex-start;font-size: 16px;line-height: 27px;color: #FFF;font-weight: 700;margin-bottom: 5px;}
+	.matchDetails .matchDetailsSlider .owl-item .item ul > li{display: flex;flex-flow: row wrap;justify-content: space-between;align-items: flex-start;font-size: 16px;line-height: 27px;color: #FFF;margin-bottom: 5px;}
 	.matchDetails .matchDetailsSlider .owl-item .item ul > li:last-child{margin-bottom: 0px;}
 	.matchDetails .matchDetailsSlider .owl-prev{position: absolute;left: 0px;top: 50%;transform: translate(0,-50%);}
 	.matchDetails .matchDetailsSlider .owl-next{position: absolute;right: 0px;top: 50%;transform: translate(0,-50%);}
@@ -239,7 +239,7 @@ section{padding: 100px 0px;}
 	footer .topFooter .footerHdin::after {content: "";position: absolute;width: 28px;height: 1px;background: #FFF;bottom: -4px;left: 0px;}
 	footer .topFooter .topFooterWrapper .footerHdin::after {content: none;}
 	footer .topFooter .logoWrapper{display: block;margin-bottom: 20px;}
-	footer .topFooter .logoWrapper img{max-width: 90px;}
+	footer .topFooter .logoWrapper img{max-width: 170px;}
 	footer .topFooter .footerPara{font-size: 16px; line-height:24px;color: #999; font-weight: 300;padding: 0px;}
 	footer .topFooter .footerLinks{margin: 0px;margin-top: -8px;}
 	footer .topFooter .footerLinks > li{font-size: 16px;line-height: 33px;color: #999;}
@@ -262,7 +262,7 @@ section{padding: 100px 0px;}
 	.latestNewsDetails .latestNewsWrapper p{font-size: 16px;line-height: 26px;color: #FFF;font-family: 'Open Sans';padding: 0px;}
 	.latestNewsDetails .latestNewsDetailsSlider{background: #111111;padding: 30px 40px;}
 	.latestNewsDetails .latestNewsDetailsSlider .latestNewsImg{width: 100%;}
-	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt{padding: 25px;background: #242424;width: 100%;}
+	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt{padding: 20px;background: #242424;width: 100%;}
 	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3{margin: 0px;font-size: 14px;line-height: 26px;text-align: center;color: #FFF;}
 	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3 a{margin: 0px;font-size: 14px;line-height: 26px;text-align: center;color: #FFF;}
 	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3 a:hover, .latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3 a:focus{color:#f8c534;}
@@ -326,10 +326,15 @@ section{padding: 100px 0px;}
 /* Login Page Ends */
 
 /* Dashboard Header CSS Starts*/
-	.dHedin{background: #000 !important;padding: 17px 20px;border-top-left-radius: 5px;border-top-right-radius: 5px;box-shadow: 0px 0px 32px 1px rgba(0,0,0,0.1);}
+	.dHedin{background: #000 !important;padding: 16px 20px;border-top-left-radius: 5px;border-top-right-radius: 5px;box-shadow: 0px 0px 32px 1px rgba(0,0,0,0.1);}
 	.dHedin th:first-child{border-top-left-radius: 5px;}
 	.dHedin th:last-child{border-top-right-radius: 5px;}
 	.dHedin h3{font-size: 18px;line-height: 25px;font-family: 'Open Sans';color: #FFF;margin: 0px;}
+	.dHedin2 .dHedin{display: flex;flex-flow: row wrap;justify-content: space-between;align-items: center;}
+	.dHedin2 .dHedin h3{}
+	.dHedin2 .dHedin .sveImg{font-size: 14px;line-height: 17px;padding: 10px 12px;background: #FFF;display: block;font-family: 'Open Sans';font-weight: 600; border-radius: 3px; border: 1px solid #FFF; color: #000;}
+	.dHedin2 .dHedin .sveImg:hover, .dHedin2 .dHedin .sveImg:focus{ background: #fac124; border: 1px solid #fac124;}
+	
 	.dashboardContainer{padding: 0px;}
 	.dashboardContainerWrapper{padding: 0px 30px; background: #FFF;}
 	.dashboardContainer > .dashboardContainerWrapper > div{padding: 30px 0px;}
@@ -424,11 +429,11 @@ section{padding: 100px 0px;}
 	.dashboardHome .profitCategory table tr{background: #f7f5f5;}
 	
 	.dashboardHome .profitCategory table tr td{padding: 19px 19px;text-align: center;font-size: 14px;line-height: 21px;font-family: 'Open Sans';margin: 0px;font-weight: 400;color: #8f8f8f;}
-	.dashboardHome .profitCategory table tr td:first-child{text-align: left;}
+	.dashboardHome .profitCategory table tr td:first-child{text-align: left; padding-right: 10px;}
 	.dashboardHome .profitCategory table tr td:nth-child(2){padding: 19px 0px;}
 	.dashboardHome .profitCategory{display: flex;flex-flow: row wrap;justify-content: space-between;align-items: flex-start;}
 	.dashboardHome .profitCategory .profitCategoryLft{width: 43%;}
-	.tblScrlCntntWrap{max-height: 414px;height: 414px;overflow-y: auto;}
+	.tblScrlCntntWrap{max-height: 373px;height: 373px;overflow-y: auto;}
 	.dashboardHome .profitCategory .profitCategoryLft table tr{border-bottom: 1px solid #e2e0e0;}
 	.dashboardHome .profitCategory .profitCategoryLft table tr:hover{background: #fff;box-shadow: 0px 0px 10px #d2d2d2;}
 	.dashboardHome .profitCategory .profitCategoryRght{width: 55%;display: flex;flex-flow: row wrap;justify-content: space-between;}
@@ -451,7 +456,7 @@ section{padding: 100px 0px;}
 	
 	.ui-widget-header{background-color: #444444 !important;}
 	.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight{background-color: #444444 !important; border: 1px solid #444 !important;}
-	.ui-datepicker{z-index: 9999 !important;width: 250px !important;}
+	.ui-datepicker{z-index: 99999 !important;width: 250px !important;}
 /* Dashboard Header CSS Ends*/
 
 
@@ -477,18 +482,26 @@ section{padding: 100px 0px;}
 		.dashboardContainerWrapper .leftFilter .addFilter h2{font-size: 20px;line-height: 30px;margin: 0px;font-family: 'Open Sans';color: #010101;
 		margin-bottom: 10px;}
 		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-heading{padding: 0px; border: 0px;}
-		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-heading .panel-title a{display: flex;flex-flow: row wrap;justify-content: flex-start;align-items: center;color: #4a4a4a;font-size: 16px;font-family: 'Open Sans';padding: 20px 10px; background: #FFF;}
+		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-heading .panel-title a{display: flex;flex-flow: row wrap;justify-content: flex-start;align-items: center;color: #4a4a4a;font-size: 16px;font-family: 'Open Sans';padding: 20px 10px; background: #FFF; border-radius: 4px;}
 		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default{border: 1px solid #d7dbe3;}
 		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body{border: 0px; background: #ebebf0; padding: 20px;}
 		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group:last-child{margin: 0px;}
 		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group label{font-size: 14px;color: #1f252c;font-family: 'Open Sans';}
 		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper{display: flex;flex-flow: row wrap;justify-content: space-between;}
-		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper .form-control{width: 71%;border: 1px solid #d7dbe3;border-radius: 2px;font-size: 14px;color: rgba(31,37,44,0.4);height: auto;padding: 9px 12px;font-family: 'Open Sans';}
+		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper .form-control{width: 71%;border: 1px solid #d7dbe3;border-radius: 2px;font-size: 14px;color: rgba(31,37,44,0.5);height: auto;padding: 9px 12px;font-family: 'Open Sans';}
+		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper select{-moz-appearance: none;-webkit-appearance: none;position: relative;background-image: url('../images/select_arowblck.png');background-repeat: no-repeat;background-size: 10px; background-position: calc(100% - 10px);padding-right: 25px !important;white-space: nowrap;overflow: hidden !important;text-overflow: ellipsis;}
+		/*.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper select:hover{ background: #000; background-image: url('../images/select_arow.png');background-repeat: no-repeat;background-size: 10px; background-position: calc(100% - 10px); color: #FFF;}*/
+		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper select option{padding: 0px 12px;}
+		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper .threeItms{width: 33.5%;}
+		
+		.dashboardContainerWrapper .leftFilter .addFilter .panel-group .panel-default .panel-collapse .panel-body .form-group .filterBtnWrapper .datepicker{background-image: url('../images/date_picker_icn.png');background-repeat: no-repeat;background-position: calc(100% - 10px);}
+		
 		.addFltrBtn{width: 25%;font-size: 16px;color: #FFF;font-family: 'Open Sans';background: #4cc7ac;border: 1px solid #4cc7ac;border-radius: 2px;}
 		.addFltrBtn:hover{background: #f8c534; border: 1px solid #f8c534 ;}
 		
 		.dashboardContainer > .dashboardContainerWrapper .dashMainWrapper{display: flex;flex-flow: row wrap;justify-content: space-between;}
 		.dashboardContainer > .dashboardContainerWrapper .dashboardMain{width: 68%;}
+		.dashboardMainFull{width: 100% !important;}
 		.dashboardContainer > .dashboardContainerWrapper .dashboardMain .subscriptionNotification{position: relative;background: #ff6666;padding: 10px 20px;border-radius: 3px;margin-bottom: 30px;}
 		.dashboardContainer > .dashboardContainerWrapper .dashboardMain .subscriptionNotification p{padding: 0px;font-family: 'Open Sans';font-size: 14px;line-height: 22px;color: #FFF;letter-spacing: 1px;}
 		.dashboardContainer > .dashboardContainerWrapper .dashMainWrapper .leftFilter{width: 27%;}
@@ -522,7 +535,7 @@ section{padding: 100px 0px;}
 		.dUpldBxLft .dUpldBx{background: #e1e1e1;display: flex;justify-content: center;align-items: center;height: 100%;}
 		.dUpldBxLft .dUpldBx p{padding: 0px;font-size: 24px;line-height: 26px;color: #7f7e7e;font-family: 'Open Sans';font-weight: 300;}
 		.dUpldBxRght{width: 59%;padding: 10px 0px;}
-		.dUpldBxRght a{display: flex;margin-bottom: 5px;color: #3ba890;}
+		.dUpldBxRght a{display: flex;margin-bottom: 5px;color: #3ba890;align-items: center;}
 		.dUpldBxRght a:hover{color: #000;}
 		.dUpldBxRght a .gTxt{font-size: 14px;line-height: 22px;font-family: 'Open Sans';}
 		
@@ -548,6 +561,19 @@ section{padding: 100px 0px;}
 		.dTabs .nav-tabs {border-bottom: 0px;display: table;margin-bottom: 10px;}
 	/* Notification Page Ends */
 	
+	/* Pagination CSS Starts */
+		.pagination{margin: 10px 0px 10px 0px;width: 100%;display: flex;justify-content: flex-end;}
+		.pagination ul{display: flex;flex-flow: row wrap;justify-content: center;border: 1px solid #bbb;border-radius: 2px; margin: 0px;}
+		.pagination ul li{border-right: 1px solid #bbb;}
+		.pagination ul li:hover, .pagination ul li:focus{}
+		.pagination ul li:hover a, .pagination ul li:focus a{color: #FFF !important;opacity: 1 !important;background: #f8c534 ;}
+		.pagination ul li.active > a{color: #FFF !important;opacity: 1 !important;background: #f8c534 ;}
+		.pagination ul li > a{color: #8f8f8f; font-size: 14px;padding: 6px 12px;display: block;transition:all 0.5s ease; -ms-transition:all 0.5s ease; -webkit-transition:all 0.5s ease; -o-transition:all 0.5s ease; -moz-transition:all 0.5s ease;}
+		.pagination ul li:first-child > a, .pagination ul li:last-child(2) > a{color: #1d1d1d;opacity: 0.7;}
+		.pagination ul li:last-child{border-right: 0px;}
+
+
+	/* Pagination CSS Ends */
 	
 	/* Previous Courses Starts*/
 		
@@ -561,4 +587,7 @@ section{padding: 100px 0px;}
 /* Dashboard Main Ends */
 
 
-
+.form-control option {
+	border-right: #ccc solid 1px;
+	/* border-left: #ccc solid 1px; */
+}
