Opponent screen integrated.

--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -76,7 +76,7 @@
                 </a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a href="d_opponents.html">
+                <a routerLink="opponent">
                   <span class="icnWrapperD">
                     <img src="../../../../assets../../../../assets//images/dashboard_icn5.png" alt=""
                          class="img-responsive"/></span>
