--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -29,14 +29,15 @@
                 </div>
                 <div class="form-group rmbrFrgtPswd">
                   <div class="rmembrPswd">
-                    <input type="checkbox">
-                    <label class="rmbrMe">Remember Me</label>
+                    <input type="checkbox" id="rememberMe" formControlName="rememberMe">
+                    <label class="rmbrMe" for="rememberMe">Remember Me</label>
                   </div>
 
                   <a href="forgot_password.html" class="frgtPsswd">Forgot my Password?</a>
                 </div>
 
-                <input type="button" value="Login" (click)="onSignInBtnClick()" class="formBtn" [disabled]="!loginForm.valid">
+                <input type="button" value="Login" (click)="onSignInBtnClick()" class="formBtn"
+                       [disabled]="!loginForm.valid">
               </form>
               <p class="otherSigninPara">You can also <a href="javascript:void(0)" class="lred">sign up here or</a> sign
                 in by:</p>
