--- a/src/app/user/components/dashboard/user-dashboard.component.html
+++ b/src/app/user/components/dashboard/user-dashboard.component.html
@@ -1,156 +1,16 @@
 <!-- DashBoard Home Starts -->
 <section class="dashboardHome">
   <div class="container">
+    <div class="common-loader" *ngIf="isLoading">
+      <md-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></md-progress-spinner>
+    </div>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 dashboardContainer">
-        <div class="topFiltrWrapper">
-          <div class="dashboardName">
-            <h1>Dashboard</h1>
-          </div>
-          <div class="topFilter">
-            <div class="form-group slctWrapper">
-              <label class="srOnly">Filter By Year</label>
-              <div class="dropdownSelect">
-                <a href="javascript:void(0)" class="dropdownSelectClick form-control">Filter By Year</a>
-                <ul class="dropdownSelectMenu">
-                  <li><a href="javascript:void(0)">2015</a></li>
-                  <li><a href="javascript:void(0)">2016</a></li>
-                  <li><a href="javascript:void(0)">2017</a></li>
-                </ul>
-              </div>
-              <!--<select class="form-control">
-                <option>Filter By Year</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-              </select>-->
-            </div>
-            <div class="form-group dteWrapper">
-              <label class="">From</label>
-              <input type="text" class="form-control datepicker" name="dateFrom" placeholder="20-jan-2017">
-            </div>
-            <div class="form-group dteWrapper">
-              <label class="">To</label>
-              <input type="text" class="form-control datepicker" name="dateTo" placeholder="28-jan-2017">
-            </div>
-            <div class="form-group slctWrapper slctWrapperCat">
-              <label class="srOnly">Category</label>
-              <div class="dropdownSelect">
-                <a href="javascript:void(0)" class="dropdownSelectClick form-control">Category</a>
-                <ul class="dropdownSelectMenu">
-                  <li><a href="javascript:void(0)">1</a></li>
-                  <li><a href="javascript:void(0)">2</a></li>
-                  <li><a href="javascript:void(0)">3</a></li>
-                </ul>
-              </div>
-              <!--<select class="form-control">
-                <option>Category</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-              </select>-->
-            </div>
-            <div class="form-group slctWrapper">
-              <label class="srOnly">Site</label>
-              <div class="dropdownSelect">
-                <a href="javascript:void(0)" class="dropdownSelectClick form-control">Site</a>
-                <ul class="dropdownSelectMenu">
-                  <li><a href="javascript:void(0)">1</a></li>
-                  <li><a href="javascript:void(0)">2</a></li>
-                  <li><a href="javascript:void(0)">3</a></li>
-                </ul>
-              </div>
-              <!--<select class="form-control">
-                <option>Site</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-              </select>-->
-            </div>
-            <div class="form-group slctWrapper">
-              <label class="srOnly">Sport</label>
-              <div class="dropdownSelect">
-                <a href="javascript:void(0)" class="dropdownSelectClick form-control">Sport</a>
-                <ul class="dropdownSelectMenu">
-                  <li><a href="javascript:void(0)">1</a></li>
-                  <li><a href="javascript:void(0)">2</a></li>
-                  <li><a href="javascript:void(0)">3</a></li>
-                </ul>
-              </div>
-              <!--<select class="form-control">
-                <option>Sport</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-              </select>-->
-            </div>
-          </div>
-        </div>
-
+        <rp-dashboard-filter (filterChanged)="updateDashboard($event)"></rp-dashboard-filter>
         <div class="dashboardContainerWrapper fixdPad">
-
-          <div class="topStats">
-            <div class="gtopStatsBx topStatsBx">
-              <div class="bxTop">
-                <div class="bxImgWrapper">
-                  <img src="../../../../assets/images/dash_cat1.png" alt="" class="img-responsive"/>
-                </div>
-                <div class="bxTxtWrapper">
-                  <h4>Entries</h4>
-                  <p>Lorem Ipsum is dummy text</p>
-                </div>
-              </div>
-              <div class="bxBottom">
-                <p class="statsNum">200</p>
-              </div>
-            </div>
-
-            <div class="btopStatsBx topStatsBx">
-              <div class="bxTop">
-                <div class="bxImgWrapper">
-                  <img src="../../../../assets/images/dash_cat2.png" alt="" class="img-responsive"/>
-                </div>
-                <div class="bxTxtWrapper">
-                  <h4>Fees Paid</h4>
-                  <p>Lorem Ipsum is dummy text</p>
-                </div>
-              </div>
-              <div class="bxBottom">
-                <p class="statsNum">256,843</p>
-              </div>
-            </div>
-
-            <div class="rtopStatsBx topStatsBx">
-              <div class="bxTop">
-                <div class="bxImgWrapper">
-                  <img src="../../../../assets/images/dash_cat3.png" alt="" class="img-responsive"/>
-                </div>
-                <div class="bxTxtWrapper">
-                  <h4>Loss</h4>
-                  <p>Lorem Ipsum is dummy text</p>
-                </div>
-              </div>
-              <div class="bxBottom">
-                <p class="statsNum">26,44</p>
-              </div>
-            </div>
-
-            <div class="ytopStatsBx topStatsBx">
-              <div class="bxTop">
-                <div class="bxImgWrapper">
-                  <img src="../../../../assets/images/dash_cat4.png" alt="" class="img-responsive"/>
-                </div>
-                <div class="bxTxtWrapper">
-                  <h4>ROI</h4>
-                  <p>Lorem Ipsum is dummy text</p>
-                </div>
-              </div>
-              <div class="bxBottom">
-                <p class="statsNum">- $10.29</p>
-              </div>
-            </div>
+          <div>
+            <rp-dashboard-statics  [contestData]="staticsData"></rp-dashboard-statics>
           </div>
-
           <div class="profitSection">
             <div class="dHedin">
               <h3>Cumulative Profit By Day of The Week</h3>
