--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -111,7 +111,7 @@
               <ul class="dropdown-menu" aria-labelledby="profileDrpdwn">
                 <li><a href="#">My Profile</a></li>
                 <li><a href="#">Setting</a></li>
-                <li><a href="#">Log Out</a></li>
+                <li><a (click)="logoutUser()">Log Out</a></li>
               </ul>
             </div>
           </div>
