--- a/src/styles.css
+++ b/src/styles.css
@@ -11,5 +11,9 @@
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.4);
-  z-index: 999;
+  z-index: 100000;
+}
+
+.dashboardContainer .topFiltrWrapper .topFilter .form-group {
+  width: auto;
 }
