--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -28,8 +28,8 @@
 
 
           <div class="logoWrapper">
-            <a href="dashboard.html"><img src="../../../../assets/images/logo.png" alt="LOGO"
-                                          class="img-responsive"/></a>
+            <a routerLink="/"><img src="../../../../assets/images/logo.png" alt="LOGO"
+                                   class="img-responsive"/></a>
           </div>
 
           <div class="menuToggle">
@@ -51,7 +51,7 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a routerLink="overview">
                   <div class="icnWrapperD">
-                    <img src="../../../../assets../../../../assets//images/dashboard_icn2.png" alt=""
+                    <img src="../../../../assets/images/dashboard_icn2.png" alt=""
                          class="img-responsive"/>
                   </div>
                   <span class="menuName">Overview</span>
@@ -60,7 +60,7 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a routerLink="cohort">
                   <div class="icnWrapperD">
-                    <img src="../../../../assets../../../../assets//images/dashboard_icn3.png" alt=""
+                    <img src="../../../../assets/images/dashboard_icn3.png" alt=""
                          class="img-responsive"/>
                   </div>
                   <span class="menuName">Cohort</span>
@@ -69,7 +69,7 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a routerLink="contests">
                   <div class="icnWrapperD">
-                    <img src="../../../../assets../../../../assets//images/dashboard_icn4.png" alt=""
+                    <img src="../../../../assets/images/dashboard_icn4.png" alt=""
                          class="img-responsive"/>
                   </div>
                   <span class="menuName">Contests</span>
@@ -78,14 +78,14 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a routerLink="opponent">
                   <span class="icnWrapperD">
-                    <img src="../../../../assets../../../../assets//images/dashboard_icn5.png" alt=""
+                    <img src="../../../../assets/images/dashboard_icn5.png" alt=""
                          class="img-responsive"/></span>
                   <span class="menuName">Opponents</span>
                 </a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a href="d_graphs.html">
-                  <span class="icnWrapperD"><img src="../../../../assets../../../../assets//images/dashboard_icn6.png"
+                <a routerLink="graphs">
+                  <span class="icnWrapperD"><img src="../../../../assets/images/dashboard_icn6.png"
                                                  alt="" class="img-responsive"/>
                   </span>
                   <span class="menuName">Graphs</span>
