--- a/src/app/user/components/dashboard/user-dashboard.component.html
+++ b/src/app/user/components/dashboard/user-dashboard.component.html
@@ -9,7 +9,7 @@
         <rp-dashboard-filter (filterChanged)="updateDashboard($event)"></rp-dashboard-filter>
         <div class="dashboardContainerWrapper fixdPad">
           <div>
-            <rp-dashboard-statics  [contestData]="staticsData"></rp-dashboard-statics>
+            <rp-dashboard-statics [contestData]="staticsData"></rp-dashboard-statics>
           </div>
           <div class="profitSection">
             <div class="dHedin">
@@ -28,73 +28,16 @@
                 </div>
               </div>
             </div>
-
             <div class="">
-              <img src="../../../../assets/images/profit_chart.png" alt="" class="img-responsive"/>
+              <div #lineChart>
+              </div>
             </div>
           </div>
 
           <div class="profitCategory">
             <div class="profitCategoryLft">
-              <div class="table-responsive">
-                <table cellpadding="0" cellspacing="0" border="0" class="tblFixdTp">
-                  <tr class="dHedin">
-                    <th width="20%">Sr. No.</th>
-                    <th width="60%">Contest</th>
-                    <th width="20%">Profit/Loss</th>
-                  </tr>
-                </table>
-                <div class="tblScrlCntntWrap">
-                  <table cellpadding="0" cellspacing="0" border="0" class="tblScrlCntnt">
-                    <tr>
-                      <td width="20%">1</td>
-                      <td width="60%">NBA $500K Courtside Special [$100K to 1st!] (5/5)</td>
-                      <td width="20%">
-                        48500
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>NBA $500K Courtside Special [$100K to 1st!] (5/5)</td>
-                      <td>
-                        43417
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>NBA $500K Courtside Special [$100K to 1st!] (5/5)</td>
-                      <td>
-                        4500
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>4</td>
-                      <td>NBA $500K Courtside Special [$100K to 1st!] (5/5)</td>
-                      <td>
-                        1500
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>5</td>
-                      <td>NBA $500K Courtside Special [$100K to 1st!] (5/5)</td>
-                      <td>
-                        1500
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>6</td>
-                      <td>NBA $500K Courtside Special [$100K to 1st!] (5/5)</td>
-                      <td>
-                        1500
-                      </td>
-                    </tr>
-                  </table>
-                </div>
-
-
-              </div>
+              <rp-dashboard-top-wins [winRecords]="topWinData"></rp-dashboard-top-wins>
             </div>
-
             <div class="profitCategoryRght">
               <div class="table-responsive">
                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
