Upload screen integrated, playbreakdown charts added in dashboard. routing issue fixed.

--- a/src/app/user/components/dashboard/filter/dashboard-filter.component.html
+++ b/src/app/user/components/dashboard/filter/dashboard-filter.component.html
@@ -6,7 +6,7 @@
     <div class="form-group slctWrapper">
       <label class="srOnly">Filter By Year</label>
       <div class="dropdownSelect">
-        <a href="javascript:void(0)" class="dropdownSelectClick form-control">Filter By Week</a>
+        <a href="javascript:void(0)" class="dropdownSelectClick form-control">Filter By Year</a>
         <ul class="dropdownSelectMenu">
           <li (click)="filterTimePeriodChanged('week')"><a>Filter By Week</a></li>
           <li (click)="filterTimePeriodChanged('month')"><a>Filter By Month</a></li>
