--- a/src/app/user/components/graph/graph.component.html
+++ b/src/app/user/components/graph/graph.component.html
@@ -36,8 +36,8 @@
                   <div role="tabpanel" class="tab-pane active" id="Profit">
                     <div class="dHedin2">
                       <div class="dHedin">
-                        <h3>&nbsp;</h3>
-                        <a href="javascript:void(0)" class="sveImg">Save Image</a>
+                        <h3>{{chartTitle}}</h3>
+                        <!--<a href="javascript:void(0)" class="sveImg">Save Image</a>-->
                       </div>
                       <div class="marTop30" style="margin-left: -20px">
                         <div #chartAnchor>
