--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -48,8 +48,8 @@
                   <span class="menuName">Dashboard</span>
                 </a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a routerLink="overview">
+              <li routerLinkActive="active">
+                <a routerLink="/user/overview">
                   <div class="icnWrapperD">
                     <img src="../../../../assets/images/dashboard_icn2.png" alt=""
                          class="img-responsive"/>
@@ -57,8 +57,8 @@
                   <span class="menuName">Overview</span>
                 </a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a routerLink="cohort">
+              <li routerLinkActive="active">
+                <a routerLink="/user/cohort">
                   <div class="icnWrapperD">
                     <img src="../../../../assets/images/dashboard_icn3.png" alt=""
                          class="img-responsive"/>
@@ -66,8 +66,8 @@
                   <span class="menuName">Cohort</span>
                 </a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a routerLink="contests">
+              <li routerLinkActive="active">
+                <a routerLink="/user/contests">
                   <div class="icnWrapperD">
                     <img src="../../../../assets/images/dashboard_icn4.png" alt=""
                          class="img-responsive"/>
@@ -75,24 +75,24 @@
                   <span class="menuName">Contests</span>
                 </a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a routerLink="opponent">
+              <li routerLinkActive="active">
+                <a routerLink="/user/opponent">
                   <span class="icnWrapperD">
                     <img src="../../../../assets/images/dashboard_icn5.png" alt=""
                          class="img-responsive"/></span>
                   <span class="menuName">Opponents</span>
                 </a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a routerLink="graphs">
+              <li routerLinkActive="active">
+                <a routerLink="/user/graphs">
                   <span class="icnWrapperD"><img src="../../../../assets/images/dashboard_icn6.png"
                                                  alt="" class="img-responsive"/>
                   </span>
                   <span class="menuName">Graphs</span>
                 </a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a href="d_upload.html">
+              <li routerLinkActive="active">
+                <a routerLink="/user/uploads">
                   <span class="icnWrapperD">
                     <img src="../../../../assets/images/dashboard_icn7.png" alt="" class="img-responsive"/></span>
                   <span class="menuName">Uploads</span>
