--- a/src/app/user/components/dashboard/dashboard-top-wins/dashboard-top-wins.component.html
+++ b/src/app/user/components/dashboard/dashboard-top-wins/dashboard-top-wins.component.html
@@ -9,7 +9,7 @@
     <div class="tblScrlCntntWrap">
       <table cellpadding="0" cellspacing="0" border= "0" class="tblScrlCntnt">
         <tr *ngFor="let record of winRecords;let index = index">
-          <th scope="row">{{index+1}}</th>
+          <td scope="row">{{index + 1}}</td>
           <td>{{record._id}}</td>
           <td>
             <span *ngIf="(record.net >= 0)" style="color: #4caf50">{{record.net}}</span>
