upload screen error fixed

--- a/src/app/user/components/dashboard/filter/dashboard-filter.component.html
+++ b/src/app/user/components/dashboard/filter/dashboard-filter.component.html
@@ -24,7 +24,7 @@
     <div class="form-group">
       <button class="form-control" (click)="onBtnTodayClicked()">Today</button>
     </div>
-    <div class="form-group slctWrapper slctWrapperCat">
+    <!--<div class="form-group slctWrapper slctWrapperCat">
       <label class="srOnly">Category</label>
       <div class="dropdownSelect">
         <a href="javascript:void(0)" class="dropdownSelectClick form-control">{{category ? category.label : 'Category'
@@ -39,7 +39,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div>-->
     <div class="form-group slctWrapper">
       <label class="srOnly">Site</label>
       <div class="dropdownSelect">
