Pagination added Contest screen. User setting screen integrated, testing is remaining. Admin side ( dashboard, members and plans ) integrated. Admin side code and structure optimized, UI is reaming, need new UI.

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -53,7 +53,10 @@
             <ul>
               <li class="loginBtn" *ngIf="!isLoggedIn"><a routerLink="/login">Login</a></li>
               <li class="signUpBtn" *ngIf="!isLoggedIn"><a routerLink="/signUp">Sign Up</a></li>
-              <li class="signUpBtn" *ngIf="isLoggedIn"><a style="width: auto" routerLink="/user">Go to Dashboard</a>
+              <li class="signUpBtn" *ngIf="isLoggedIn">
+                <a style="width: auto" routerLink="{{role == 'user' ? '/user' : '/admin'}}">
+                  Go to Dashboard
+                </a>
               </li>
               <li class="searchBtn">
                 <a href="javascript:void(0)"><img src="../../../../assets/images/search_icn.png" alt="LOGO"
