--- a/src/app/admin/admin-main.component.html
+++ b/src/app/admin/admin-main.component.html
@@ -1,3 +1,10 @@
-<h1>
-  Admin Main Component...
-</h1>
+<div class="overlay"></div>
+<main class="page-content content-wrap">
+  <div>
+    <admin-header></admin-header>
+    <left-bar></left-bar>
+  </div>
+  <div class="page-inner">
+    <router-outlet></router-outlet>
+  </div>
+</main>
