--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -106,11 +106,11 @@
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                 <span class="icnWrapperS"><img src="../../../../assets/images/dashboard_profile_img.png" alt=""
                                                class="img-responsive"/></span>
-                <span class="profileName">Douglas Potter</span>
+                <span class="profileName">{{loggedUser?.first_name}} {{loggedUser?.last_name}}</span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="profileDrpdwn">
                 <li><a href="#">My Profile</a></li>
-                <li><a href="#">Setting</a></li>
+                <li><a routerLink="/user/settings">Setting</a></li>
                 <li><a (click)="logoutUser()">Log Out</a></li>
               </ul>
             </div>
